fixed overflow

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ html {
 
 body {
   background-color: #001f3f;
+  overflow: hidden;
 }
 
 .board {
